finished with flexbox and fonts

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>WordPress интенсив</title>
   </head>
@@ -65,6 +70,109 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="optimization">
+      <div class="container">
+        <h2 class="optimization_header">
+          Что такое оптимизация и зачем она нужна?
+        </h2>
+        <div class="optimization_text">
+          На просторах интернета несчетное количество действующих и даже
+          заброшенных сайтов. Большинство из них совпадает не только по
+          категориям, но и по содержанию. <br /><br />Представьте себе тысячи
+          сайтов, на которых тем или иным образом предоставляется одна и та же
+          информация или продается одна и та же услуга. И попасть на эти сайты
+          можно лишь по тематическим запросам в поисковых системах.
+          <br /><br />Но как вам быть, если ваш сайт похож на сотню или тысячу
+          таких же, а на одной странице гугла или яндекса всего 10 позиций? Как
+          привести посетителей страницы своего ресурса? Именно для этого и нужна
+          оптимизация – для вывода вашего сайта на первую страницу поиска!
+          <br /><br />
+          <span
+            >Мы научим вас, как сделать ваш сайт привлекательным для поисковых
+            систем и посоветуем, как вывести его на первые страницы, обходя всех
+            конкурентов.</span
+          >
+        </div>
+        <img src="img/lady.png" alt="lady" class="optimization_img" />
+      </div>
+    </section>
+    <section class="finish">
+      <div class="container">
+        <h2 class="finish_header">По окончании обучения Вы сможете!</h2>
+        <div class="finish_divider"></div>
+        <div class="finish_wrapper">
+          <div class="finish_item">
+            <div class="finish_round">
+              <img src="img/icons/icon_4.png" alt="4" class="finish_icon" />
+            </div>
+            <div class="finish_descr">Создать свой сайт или блог</div>
+          </div>
+          <div class="finish_item">
+            <div class="finish_round">
+              <img src="img/icons/icon_5.png" alt="5" class="finish_icon" />
+            </div>
+            <div class="finish_descr">Правильно его оптимизировать</div>
+          </div>
+          <div class="finish_item">
+            <div class="finish_round">
+              <img src="img/icons/icon_6.png" alt="6" class="finish_icon" />
+            </div>
+            <div class="finish_descr">
+              Обеспечить ему медленный, но верный рост в ТОП
+            </div>
+          </div>
+          <div class="finish_item">
+            <div class="finish_round">
+              <img src="img/icons/icon_7.png" alt="7" class="finish_icon" />
+            </div>
+            <div class="finish_descr">
+              Достигнуть стабильного прироста посетителей
+            </div>
+          </div>
+          <div class="finish_item">
+            <div class="finish_round">
+              <img src="img/icons/icon_8.png" alt="8" class="finish_icon" />
+            </div>
+            <div class="finish_descr">Получать ощутимую прибыль</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="gift">
+      <div class="conteiner">
+        <div class="gift_logo">
+          <img src="img/icons/gift_top.png" alt="top" class="gift_logo_top" />
+          <img src="img/icons/gift_bot.png" alt="bot" class="gift_logo_bot" />
+        </div>
+        <div class="gift_text">
+          Для всех участников интенсива предусмотрены бонусы и подарки.
+          Нажимайте на кнопку ниже, принимайте участие в вебинарах и забирайте
+          свой приз по окончании обучения!
+        </div>
+        <button class="gift_btn">Записаться на интенсив!</button>
+      </div>
+    </section>
+    <section class="webinar">
+      <div class="container">
+        <div class="webinar_logo">
+          <img src="img/icons/icon_9.png" alt="9" class="webinar_logo_img" />
+        </div>
+        <h2 class="webinar_header">Первый вебинар состоится:</h2>
+        <h2 class="webinar_header_date">10 сентября в 20:00 по Москве</h2>
+        <div class="webinar_text">
+          Успейте записаться, количество мест ограничено!
+        </div>
+      </div>
+    </section>
+    <section class="footer">
+      <div class="container">
+        <div class="support_policy">
+          <a href="#">Служба поддержки </a> <span>|</span>
+          <a href="#">Политика конфиденциальности </a>
+        </div>
+        <div class="phone">Позвоните нам 8-800-555-01-21</div>
       </div>
     </section>
   </body>
